In main first block tried

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-md-block">
                             <h5>Get Started Digital Learning</h5>
                             <p>It is a long established fact that a reader will be distracted by the readable content of
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                        <img src="./images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-md-block">
                             <h5>Get Started Digital Learning</h5>
                             <p>It is a long established fact that a reader will be distracted by the readable content of
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <img src="./images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-md-block">
                             <h5>Get Started Digital Learning</h5>
                             <p>It is a long established fact that a reader will be distracted by the readable content of
@@ -101,7 +101,22 @@
                 </button>
             </div>
         </section>
+
+        <!-- sliding end -->
     </header>
+
+    <!-----------------------------main start-------------------------------->
+    <main>
+        <section class="container mt-5">
+            <div class="text-center">
+                <h1 class="fw-bold">Discover Our Popular</h1>
+                <h1 class="fw-bold">Courses</h1>
+                <p>Tech Guide is optimized for learning web technologies step by step.Examples might be simplified</p>
+                <p> to improve reading and basic understanding</p>
+            </div>
+        </section>
+    </main>
+    <!-----------------------------main end-------------------------------->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
