registration and sucess stories of students

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tech Guide</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -122,7 +123,7 @@
                     <!-------------course-1 start--------------->
                     <div class="col-6">
                         <div class="d-flex border rounded">
-                            <img src="/images/course/course-1.png" alt="course-1 Picture">
+                            <img src="./images/course/course-1.png" alt="course-1 Picture">
                             <div class="ms-3 mt-3">
                                 <h3 class="text-start fw-bold">Fundamental Of UI/UX Design</h3>
                                 <p class="text-start">The UI/UX Design Specialization brings a design-centric approach
@@ -135,7 +136,7 @@
                     <!-------------course-2 start--------------->
                     <div class="col-6">
                         <div class="d-flex border rounded">
-                            <img src="/images/course/course-2.png" alt="course-2 Picture">
+                            <img src="./images/course/course-2.png" alt="course-2 Picture">
                             <div class="ms-3 mt-3">
                                 <h3 class="text-start fw-bold">Javascript Basic to advanced</h3>
                                 <p class="text-start">Master your javascript language with lessons, quizzes, and
@@ -148,7 +149,7 @@
                     <!-------------course-3 start--------------->
                     <div class="col-6">
                         <div class="d-flex border rounded">
-                            <img src="/images/course/course-3.png" alt="course-2 Picture">
+                            <img src="./images/course/course-3.png" alt="course-2 Picture">
                             <div class="ms-3 mt-3">
                                 <h3 class="text-start fw-bold">Fullstack Web Development</h3>
                                 <p class="text-start">A full stack web developer is a person who can develop both client
@@ -161,7 +162,7 @@
                     <!-------------course-4 start--------------->
                     <div class="col-6">
                         <div class="d-flex border rounded">
-                            <img src="/images/course/course-4.png" alt="course-2 Picture">
+                            <img src="./images/course/course-4.png" alt="course-2 Picture">
                             <div class="ms-3 mt-3">
                                 <h3 class="text-start fw-bold">Digital Marketing</h3>
                                 <p class="text-start">Digital marketing, also called online marketing, is the promotion
@@ -174,7 +175,7 @@
                     <!-------------course-5 start--------------->
                     <div class="col-6">
                         <div class="d-flex border rounded">
-                            <img src="/images/course/course-5.png" alt="course-2 Picture">
+                            <img src="./images/course/course-5.png" alt="course-2 Picture">
                             <div class="ms-3 mt-3">
                                 <h3 class="text-start fw-bold">Photography Basic Rules</h3>
                                 <p class="text-start">10 Top Photography Composition Rules · Rule of Thirds · Balancing
@@ -187,7 +188,7 @@
                     <!-------------course-6 start--------------->
                     <div class="col-6">
                         <div class="d-flex border rounded">
-                            <img src="/images/course/course-6.png" alt="course-2 Picture">
+                            <img src="./images/course/course-6.png" alt="course-2 Picture">
                             <div class="ms-3 mt-3">
                                 <h3 class="text-start fw-bold">Motion Graphics</h3>
                                 <p class="text-start">Motion graphics (sometimes mograph) are pieces of animation or
@@ -213,7 +214,7 @@
             <div class="container text-center bg-light">
                 <div class="row">
                     <div class="col">
-                        <img class="border-0" src="/images/working.png" alt="">
+                        <img class="border-0" src="./images/working.png" alt="">
                     </div>
                     <div class="col  mt-5">
                         <h2 class="fw-bold text-start mt-5">Explore The elearning</h2>
@@ -246,12 +247,93 @@
                 </div>
             </div>
         </section>
-        <!----------------institute end-----------
+        <!----------------institute end----------->
+
+
+        <!------------------Subscribe start---------------->
+        <section>
+            <div class="container text-center mt-5 bg-info border rounded">
+                <div class="row">
+                    <div class="col m-5">
+                        <h2 class="fw-bold text-white text-start">Ready to join?</h2>
+                        <p class="text-start text-light">It is a long established fact that a reader will be distracted
+                            by the
+                            readable content of a page when looking at its layout</p>
+                    </div>
+                    <div class="col d-flex align-items-center justify-content-center ms-5">
+                        <a class="btn btn-primary" href="#" role="button">Register Now</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!------------------Subscribe end------------------>
+        <!------------------Successful start----------------->
+        <section class="container">
+            <!--------------Success part 1 start--------------->
+            <div class="container text-center mt-5">
+                <div class="row">
+                    <div class="col">
+                        <h2 class="fw-bold text-start">Meet Our Successfull</h2>
+                        <h2 class="fw-bold text-start">Students</h2>
+                        <p class="text-start text-dark">Learning to program is hard. It's difficult to know where to
+                            start, but it's even more challenging to know what to do after you've learned the basics.
+                        </p>
+                    </div>
+                    <div class="col">
+                    </div>
+                </div>
+            </div>
+            <!----------------Success part1 end----------------->
+            <!----------------successful student start---------->
+            <div class="row row-cols-1 row-cols-md-4 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./images/student/student-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Imaran Hossain Tipu</h5>
+                            <p class="card-text">UI/UX Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./images/student/student-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Jannatul Islam</h5>
+                            <p class="card-text">Motion Design</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./images/student/student-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Zayed Hossain Opu</h5>
+                            <p class="card-text">Graphic Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./images/student/student-4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Muna</h5>
+                            <p class="card-text">Web Developer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-5">
+                <a class="btn btn-primary" href="#" role="button">View All</a>
+            </div>
+            <!----------------successful student end---------->
+        </section>
+        <!------------------Successful end------------------->
     </main>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
