--- a/index.html
+++ b/index.html
@@ -329,7 +329,162 @@
             <!----------------successful student end---------->
         </section>
         <!------------------Successful end------------------->
+
+        <!----------------Feedback section start--------------->
+        <section>
+            <div class="container text-center mt-5">
+                <div class="row">
+                    <div>
+                        <h2 class="fw-bold text-center">Some Students Feedback</h2>
+                        <p class=" text-center text-dark">Feedback is any response regarding a student's performance or
+                            behavior. It can be verbal, written or gestural.</p>
+                    </div>
+                    <div class="col">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-----------------Feedback section end---------------->
+        <!-----------------question section start--------------->
+        <section class="container mt-5">
+            <!--------------description part start----------------->
+            <div class="container text-center mt-5">
+                <div class="row">
+                    <div>
+                        <h2 class="fw-bold text-center">Frequently Asked Questions</h2>
+                        <p class=" text-center text-dark">An FAQ is a list of commonly asked questions and answers on a
+                            website about topics.articles, websites, email lists, and online forums where common
+                            questions tend to recur.</p>
+                    </div>
+                    <div class="col">
+                    </div>
+                </div>
+            </div>
+            <!--------------description part end----------------->
+
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseOne">
+                            Difference between flex and grid?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                        aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                            Grid and flexbox. The basic difference between CSS Grid Layout and CSS Flexbox Layout is
+                            that flexbox was designed for layout in one dimension - either a row or a column. Grid was
+                            designed for two-dimensional layout - rows, and columns at the same time
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseTwo">
+                            Difference between Bootstrap and Tailwind?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingTwo">
+                        <div class="accordion-body">
+                            Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a
+                            definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more
+                            flexibility and uniqueness. Sites created using Bootstrap follow the generic pattern that
+                            makes them look identical.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            What is semantic tag?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                            Semantic HTML elements are those that clearly describe their meaning in a human- and
+                            machine-readable way. Elements such as <header> , <footer> and <article> are all considered
+                                        semantic because they accurately describe the purpose of the element and the
+                                        type of content that is inside them.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            What is css Box Model?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                            In CSS, the term "box model" is used when talking about design and layout. The CSS box model
+                            is essentially a box that wraps around every HTML element. It consists of: margins, borders,
+                            padding, and the actual content.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-----------------question section end--------------->
+        <!-----------------company section start----------------->
+        <br><br>
+        <section class="container mt-5">
+            <h2 class="fw-bold text-center">Trusted by over 800+ companies</h2>
+            <div class="d-flex justify-content-evenly mt-5">
+                <div>
+                    <img src="./images/company/company-1.png" alt="">
+                </div>
+                <div>
+                    <img src="./images/company/company-2.png" alt="">
+                </div>
+                <div><img src="./images/company/company-3.png" alt="">
+                </div>
+                <div><img src="./images/company/company-4.png" alt="">
+                </div>
+                <div><img src="./images/company/company-5.png" alt="">
+                </div>
+                <div><img src="./images/company/company-6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-----------------company section end----------------->
     </main>
+    <!-----------------------------main end-------------------------------->
+
+    <!---------------------------footer start------------------------------>
+    <footer class="bg-dark mt-5">
+        <div class="text-white text-center align-items-center pt-5">
+            <h2 cass="fw-bold mt-5">Pro Edu</h2>
+            <p>Office 41, Jashimuddin-road,Uttara-4</p>
+            <p>Uttara, Dhaka</p>
+            <p>Privacy Policy | Terms of use</p>
+        </div>
+        <div class="d-flex justify-content-center text-light">
+            <div class="ms-4">
+                <i class="fa-brands fa-facebook"></i>
+            </div>
+            <div class="ms-4">
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div class="ms-4">
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+            <div class="ms-4 pb-5">
+                <i class="fa-brands fa-tiktok"></i>
+            </div>
+        </div>
+    </footer>
+    <!---------------------------footer end-------------------------------->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
